--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "babel-eslint": "^8.0.2",
+    "babel-eslint": "^7.2.3",
     "react": "^16.1.1",
+    "react-ace": "^5.7.0",
     "react-dom": "^16.1.1"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.5.1",
     "react-scripts": "1.0.17"
   },
