--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     ],
     "react/forbid-prop-types": [0],
     "react/require-default-props": [0],
+    "no-var": [0],
     "global-require": [0],
     "react/prefer-stateless-function": [0]
   }
