--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "syntax-analysis",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "babel-eslint": "^7.2.3",
-    "react": "^16.1.1",
-    "react-ace": "^5.7.0",
-    "react-dom": "^16.1.1"
-  },
-  "devDependencies": {
-    "eslint": "^4.11.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.5.1",
-    "react-scripts": "1.0.17"
-  },
+  "name": "node-es7",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint eslint ./src/**/*.js",
+    "start": "babel-node ./src/index.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-plugin-import": "^2.7.0"
+  },
+  "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-node6": "^11.0.0",
+    "node-c-lexer": "^1.0.5"
   }
 }
