--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-cli": "^6.24.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-node6": "^11.0.0",
-    "node-c-lexer": "^1.0.5"
+    "node-c-lexer": "^1.0.5",
+    "underscore": "^1.8.3"
   }
 }
