--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint eslint ./src/**/*.js",
-    "start": "babel-node ./src/index.js"
+    "start": "babel-node ./src/index.js",
+    "test": "mocha --compilers js:babel-core/register tests/*.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +22,8 @@
     "babel-cli": "^6.24.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-node6": "^11.0.0",
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1",
     "node-c-lexer": "^1.0.5",
     "underscore": "^1.8.3"
   }
